--- a/Econopolio/WebContent/home.html
+++ b/Econopolio/WebContent/home.html
@@ -61,7 +61,7 @@
 			<p>
 				<label id="dialogQuestion">Ejemplo de pregunta</label>
 			</p>
-			<p>
+			<p id="questionList">
 				<input id="btnQuestion1" type="button" class="questionButton" value="Ejemplo de opción 1" onclick="evaluarRespuesta(1)" />
 				<input id="btnQuestion2" type="button" class="questionButton" value="Ejemplo de opción 2" onclick="evaluarRespuesta(2)" />
 				<input id="btnQuestion3" type="button" class="questionButton" value="Ejemplo de opción 3" onclick="evaluarRespuesta(3)" />
