--- a/Econopolio/WebContent/home.html
+++ b/Econopolio/WebContent/home.html
@@ -38,7 +38,7 @@
     	</div>
 		<div id="controls" class="section right">
 			<div>
-				<input type="button" id="btnStartNewGame" class="button" value="Abandonar partida" />
+				<input type="button" id="btnStartNewGame" class="button" value="Reiniciar juego" />
 				<div id="caraDado" onClick="toggleDado()"></div>
 				<input type="button" id="btnAnimDado" class="button" value="Lanzar dado" onclick="toggleDado()" />
 			</div>
