Implementados los comodines

--- a/Econopolio/WebContent/home.html
+++ b/Econopolio/WebContent/home.html
@@ -29,8 +29,8 @@
 				<p>
 					<label>Comodines disponibles: </label>
 					<ul>
-						<li><label class="bold">Saltar pregunta</label></li>
-						<li><label class="bold">Eliminar una respuesta</label></li>
+						<li><label id="comodinSaltarPregunta" class="bold">Saltar pregunta</label></li>
+						<li><label id="comodinEliminarOpciones" class="bold">Eliminar opciones</label></li>
 					</ul>
 				</p>
 			</div>
